# rkyv-codec

./: Cargo.toml  README.md
src/: codec.rs  lib.rs  meta.rs  wrappers.rs
